apps/applications/tools/irc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thelounge
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: thelounge
  template:
    metadata:
      labels:
        app: thelounge
    spec:
      containers:
        - name: thelounge
          image: ghcr.io/thelounge/thelounge:4.4.3@sha256:c2aa0916203b298ffaf3a36c4eb60ef73c1006448d430e218d37840472e84e50
          volumeMounts:
            - name: config
              mountPath: /var/opt/thelounge
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: the-lounge-config-pvc
