apps/applications/tools/irc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thelounge-ui
  namespace: default
spec:
  selector:
    app: thelounge
  ports:
    - port: 9000
      name: web-ui
