apps/applications/tools/irc/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: thelounge-policy
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: thelounge

  # This defines the allowed outbound (egress) traffic
  egress:
    # Rule: Allow Internet (to connect to external IRC servers)
    - toEntities:
        - "world"
  # Allow Ingress (Inbound)
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: keda
            app.kubernetes.io/component: interceptor
      toPorts:
        - ports:
            - port: "9000"
              protocol: "TCP"
